--- https://github.com/vadonka/lge-kernel-kang/commit/111e1be10f78da251f867e2dbb2ccc55c4d5d6e8
-- arm: tegra: power: fix lp0 resume failure 
--- https://github.com/vadonka/lge-kernel-kang/commit/4e133cc9ec0525a909dd42d0bc55fe4b5f5cc2b7
-- arm: tegra: power: fix LP2 scheduling in atomic 
--- https://github.com/vadonka/lge-kernel-kang/commit/8b4c59e15f646f24fc4978474acd52e1aae63953
-- Supress some error log cpu
--- https://github.com/vadonka/lge-kernel-kang/commit/27f8db397bcf20be0dab4096d269e96b9e6c8b7e
- introduce JRCU
-- jrcu-commits from https://github.com/poitee/sgtwifi/commits/master
-- fixes to make it compilable from https://github.com/StefanGuendhoer/LG-P990-O2X----guestekrnL-for-stock/tree/c65ae3f942e72ee8385d0e80fefb9c383d6c994f
-- lib: introduce some memory copy macros and functions 
--- https://github.com/vadonka/lge-kernel-kang/commit/11fe83394e003aa0c4a1e5d0b0e678d2de72d0db
-- Optimized ARM RWSEM algorithm 
--- https://github.com/vadonka/lge-kernel-kang/commit/2a11063968cf8613273c6fe8e05c01cfaaa9b134
--- backport/fix for 2.6.36
-- cpuidle.c: reduce pwrgood_latency 
--- https://github.com/vadonka/lge-kernel-kang/commit/88f6071333255e0f778616dbe8acb22d74636ea2


TODO:
- cherrypicking from vadonka

-- https://github.com/vadonka/lge-kernel-kang/commit/6f334518cf4f42f45dd243ac29c0d7d1ed0a3da0
-- https://github.com/vadonka/lge-kernel-kang/commit/d8800bb869ab7f0ca2df165d8e000cdaee2f3765
-- https://github.com/vadonka/lge-kernel-kang/commit/de29f457c300a4e327bdfab5c3ac6df5b7f679fa
-- https://github.com/vadonka/lge-kernel-kang/commit/88f6071333255e0f778616dbe8acb22d74636ea2


- minimize compiled size of kernel and modules
- update BCM4329 to latest version findable
-- http://nv-tegra.nvidia.com/gitweb/?p=linux-2.6.git;a=blob_plain;f=drivers/net/wireless/bcmdhd/wl_iw.c;hb=6de21231e558a85d766e7d821a6542c5c1803aa8 ?
-- http://nv-tegra.nvidia.com/gitweb/?p=linux-2.6.git&a=search&h=refs%2Fheads%2Fandroid-tegra-nv-3.1&st=commit&s=bcm ?



