@@ -2619,6 +2619,15 @@ static inline unsigned long rlimit_max(unsigned int limit)
 	return task_rlimit_max(current, limit);
 }
 
+#ifdef CONFIG_CGROUP_TIMER_SLACK
+extern unsigned long task_get_effective_timer_slack(struct task_struct *tsk);
+#else
+static inline unsigned long task_get_effective_timer_slack(
+ 		struct task_struct *tsk)
+{
+	return tsk->timer_slack_ns;
+}
+#endif
 #endif /* __KERNEL__ */
 
 #endif
